--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+body{
+    width: 50%;
+    margin: auto;
+}
 .login, .register{
     padding: 20px;
     margin: 20px;
@@ -10,4 +14,34 @@
     font-size: larger;
     padding: 10px;
     margin-bottom: 10px;
+}
+button{
+    width: 100%;
+    background-color: rgb(117, 201, 173);
+    border: none;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 20px;
+    color: white;
+    font-size: 1em;
+    font-weight: bolder;
+}
+button:hover{
+    background-color: rgb(0, 117, 78);
+    font-size: 20px;
+    color:blanchedalmond;
+}
+input{
+    border: 2px solid rgba(209, 196, 196, 0.509);
+    margin-bottom: 15px;
+    margin-top: 15px;
+    width: 100%;
+    padding: 10px;
+}
+input:hover{
+    background-color: rgba(135, 214, 214, 0.169);
+}
+label{
+    color: rgba(39, 29, 29, 0.71);
+   
 }
